--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "anthropic>=0.60.0",
     "inspect-ai>=0.3.117",
     "numpy>=2.0.0",
     "openai>=1.98.0",
