Set up git-crypt encryption for data folder
- Initialize git-crypt for the repository
- Configure .gitattributes to encrypt data/ folder contents
- Update .gitignore to allow tracking data/ folder (with encryption)
- Enable seamless access to encrypted data for authorized users

--- a/.gitignore
+++ b/.gitignore
@@ -57,11 +57,10 @@ htmlcov/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Data files
+# Data files (note: data/ folder is encrypted with git-crypt)
 *.csv
 *.json
 *.parquet
-data/
 datasets/
 
 # Model outputs
