--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,13 @@ htmlcov/
 .ipynb_checkpoints
 
 # Data files (note: data/ folder is encrypted with git-crypt)
+# Ignore CSV/JSON/parquet files except in data/ folder which is encrypted
 *.csv
+!data/*.csv
 *.json
+!data/*.json
 *.parquet
+!data/*.parquet
 datasets/
 
 # Model outputs
