--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.13"
 dependencies = [
     "anthropic>=0.60.0",
     "inspect-ai>=0.3.117",
+    "jinja2>=3.0.0",
     "numpy>=2.0.0",
     "openai>=1.98.0",
     "pytest>=8.0.0",
