--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "jinja2>=3.0.0",
     "numpy>=2.0.0",
     "openai>=1.98.0",
+    "pandas>=2.3.1",
+    "pyarrow>=21.0.0",
     "pytest>=8.0.0",
     "scipy>=1.14.0",
 ]
