--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "anthropic>=0.60.0",
+    "google-genai>=1.28.0",
     "inspect-ai>=0.3.117",
     "jinja2>=3.0.0",
     "numpy>=2.0.0",
